# btc_line

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.txt  config.json  default.nix  display.json  docs.md  flake.nix  init_service.sh  keys.json  main.py  requirements.txt  result  settings_button.py  shell.nix  streamSPY.py  temdir.lnk
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc  nix-profile-25.05-khbvilmsrv4l69nw  nix-profile-25.05-khbvilmsrv4l69nw.rc
.direnv/flake-inputs/: 4f89j4iigh91vkl9bf4pzd6kd305544q-source  cqm9sqvdq1pw85l5vym5bcymqvd1qnay-source  ff59hhmp6hzlm50m8a985vdhg7zd3hia-source  qzbj31ax4p9kjayi8f2cfdh1x2h4z1f0-source  w2lfk16kzs15hrgnj5zbrkay4ilmg2qp-source  xb4yfxa32hsjpincdgjv7xdq9kyys8l9-source
.github/workflows/: claude.yml  errors.yml
.readme_assets/: usage.md
VolumeSpikes_binance/: MarketCaps.json  _ProgramRemoteSwitch.py  futures_pairs.json  get_symbols.py  main.py  margin_pairs.json  session_id.session  spikesMessagesDeletor.py  test____MarketCaps.py  test____tryingToFigureOutTheMCtoDVFunction.py
additional_line/: VIX.py  test.py
docs/: ARCHITECTURE.md
docs/.readme_assets/: arch.mermaid  description.md  usage.sh
examples/: buffer_backpressure.rs  config.toml  test.rs
large_window/: CMEpositions.py  LSRoutliers.py  Volatility.py
large_window/CryptoStats/: CNN_fear_greed.py  Most_Longed_and_Most_Shorted_Binance.py  Most_and_Least_Leveraged_Binance.py  VIX.py  binance_futs_positions.py  bull_and_bear.py  fear_and_greed.py  main.py
src/: MarketStructure.py  additional_line.py  additional_line.rs  allListed.json  binance-perp-coins.json  binance-perp-pairs.json  config.rs  display.json  lib.rs  main.rs  main_line.rs  output.rs  settings_button.py  spy_line.rs  streamSPY.py  utils.rs
src/_Testing/: Inflows.py  test.py  testing_frames.py
src/large_window/: CMEpositions.py  LSRoutliers.py  Volatility.py
src/tiny_graphics/: Inflows.py
