[package]
name = "btc_line"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.5.49", features = ["derive"] }
color-eyre = "^0.6.5"
config = "^0.15.18"
console-subscriber = "^0.4.1"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["from", "from_str", "display"] }
futures-util = "^0.3.31"
libc = "^0.2"
reqwest = { version = "^0.12.24", features = ["json"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
smart-default = "0.7.1"
thiserror = "2.0.17"
tokio = { version = "^1.47.1", features = ["full"] }
tokio-rustls = "^0.26.4"
tokio-tungstenite = { version = "^0.28.0", features = ["native-tls"] }
tracing = "^0.1.41"
tracing-error = "^0.2.1"
tracing-futures = "^0.2.5"
tracing-log = "^0.2.0"
tracing-subscriber = { version = "^0.3.20", features = ["fmt", "json", "registry", "env-filter"] }
url = "^2.5.7"
v_exchanges = { version = "^0.12.1" }
v_utils = { version = "^2.7.2", features = ["io", "macros"] }

# Random test stuff, for dev purposes only
[[example]]
name = "test"
path = "./examples/test.rs"
