[package]
name = "btc_line"
version = "1.0.1"
edition = "2024"
authors = ["Valeriy Sakharov <valeratrades@gmail.com>"]
description = "A Bitcoin price and market data line display tool"
license = "BlueOak-1.0.0"
repository = "https://github.com/valeratrades/btc_line"
keywords = ["bitcoin", "cryptocurrency", "price", "market-data"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "^4.5.51", features = ["derive"] }
color-eyre = "^0.6.5"
config = "^0.15.19"
console-subscriber = "^0.5.0"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["from", "from_str", "display"] }
futures-util = "^0.3.31"
jiff = "0.2"
libc = "^0.2"
reqwest = { version = "^0.12.24", features = ["json"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
smart-default = "0.7.1"
thiserror = "2.0.17"
tokio = { version = "^1.48.0", features = ["full"] }
tokio-rustls = "^0.26.4"
tokio-tungstenite = { version = "^0.28.0", features = ["native-tls"] }
tracing = "^0.1.41"
tracing-error = "^0.2.1"
tracing-futures = "^0.2.5"
tracing-log = "^0.2.0"
tracing-subscriber = { version = "^0.3.20", features = ["fmt", "json", "registry", "env-filter"] }
url = "^2.5.7"
v_exchanges = { version = "^0.13.2" }
v_utils = { version = "^2.9.0", features = ["io", "macros"] }
